<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".HelpSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/helpCent"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/help_center"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/reportIssue"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/report_an_issue"
            android:textSize="20sp"
            android:textStyle="bold"/>

        <TextView
            android:id="@+id/licenses"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/licenses"
            android:textSize="20sp"
            android:textStyle="bold"/>
        <TextView
            android:id="@+id/SecuritySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/terms_and_privacy_policy"
            android:textSize="20sp"
            android:textStyle="bold"/>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>