<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".settings_activity">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintTop_toTopOf="parent"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent">
        <TextView
            android:id="@+id/NotiSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:fontFamily="@font/segoe_ui"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/notification_settings"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_rightarrow" />

        <TextView
            android:id="@+id/ThemeSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:fontFamily="@font/segoe_ui"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/theme"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_rightarrow" />

        <TextView
            android:id="@+id/HelpSettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:fontFamily="@font/segoe_ui"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/help"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_rightarrow" />
        <TextView
            android:id="@+id/SecuritySettings"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:layout_gravity="start|center_vertical"
            android:fontFamily="@font/segoe_ui"
            android:letterSpacing="0.04"
            android:padding="20dp"
            android:text="@string/security"
            android:textSize="20sp"
            android:textStyle="bold"
            app:drawableEndCompat="@drawable/ic_rightarrow" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>