<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".NotiSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <CheckBox
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:buttonTint="?attr/colorControlNormal"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/turn_off_notifications"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="?attr/colorControlNormal"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/show_notification_previews"
            android:textSize="20sp" />

        <CheckBox
            android:layout_width="349dp"
            android:layout_height="wrap_content"
            android:layout_marginTop="10dp"
            android:buttonTint="?attr/colorControlNormal"
            android:minHeight="48dp"
            android:padding="10dp"
            android:text="@string/allow_notification_sounds"
            android:textSize="20sp" />
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>