<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".ThemeSettings">

    <LinearLayout
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:background="@android:color/transparent"
        android:backgroundTint="@android:color/transparent"
        android:orientation="vertical"
        android:padding="15dp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent">

        <RadioGroup
            android:id="@+id/radioGroup"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:padding="20dp">

            <RadioButton
                android:id="@+id/lightThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:padding="10dp"
                android:buttonTint="?attr/colorControlNormal"
                android:text="@string/light_theme"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/darkThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:buttonTint="?attr/colorControlNormal"
                android:padding="10dp"
                android:text="@string/dark_theme"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />

            <RadioButton
                android:id="@+id/sysDefThemeRadioButton"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_marginTop="20dp"
                android:padding="10dp"
                android:buttonTint="?attr/colorControlNormal"
                android:text="@string/use_system_default_theme"
                android:textSize="20sp"
                tools:ignore="TouchTargetSizeCheck" />
        </RadioGroup>
    </LinearLayout>


</androidx.constraintlayout.widget.ConstraintLayout>