<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".VerifyOTP">


    <TextView
        android:id="@+id/codeSentToTxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:letterSpacing="0.05"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:gravity="fill_horizontal"
        android:text="@string/provide_the_the_6_digit_code_sent_to_the_number_you_provided"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <EditText
        android:id="@+id/sentOTPCodeEdt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:background="@drawable/pq_neutral_button"
        android:fontFamily="@font/segoe_ui"
        android:hint="@string/otp_code"
        android:inputType="phone"
        android:letterSpacing="0.04"
        android:minHeight="60dp"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textAlignment="center"
        android:textSize="18sp"
        android:textStyle="bold"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/codeSentToTxt"
        tools:ignore="Autofill" />


    <Button
        android:id="@+id/confirmOTPBtn"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginStart="20dp"
        android:layout_marginTop="50dp"
        android:background="@drawable/pq_button"
        android:gravity="center"
        android:letterSpacing="0.05"
        android:shadowColor="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:text="@string/confirm"
        android:textStyle="bold"
        android:textAllCaps="false"
        android:textColor="@color/white2"
        android:textSize="18sp"
        app:layout_constraintEnd_toStartOf="@id/cancelOTPSent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/sentOTPCodeEdt" />

    <ProgressBar
        android:id="@+id/otpVerifyProgress"
        android:layout_width="38dp"
        android:layout_height="40dp"
        android:indeterminateTint="@color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/confirmOTPBtn"
        app:layout_constraintEnd_toEndOf="@+id/confirmOTPBtn"
        app:layout_constraintStart_toStartOf="@+id/confirmOTPBtn"
        app:layout_constraintTop_toTopOf="@+id/confirmOTPBtn" />


    <TextView
        android:id="@+id/cancelOTPSent"
        android:layout_width="0dp"
        android:layout_height="wrap_content"
        android:layout_marginEnd="20sp"
        android:letterSpacing="0.05"
        android:textStyle="bold"
        android:text="@string/cancel"
        android:textAllCaps="true"
        android:textSize="20sp"
        android:gravity="center"
        app:layout_constraintBottom_toBottomOf="@+id/confirmOTPBtn"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toEndOf="@id/confirmOTPBtn"
        app:layout_constraintTop_toTopOf="@+id/confirmOTPBtn" />

</androidx.constraintlayout.widget.ConstraintLayout>
