<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    android:layout_width="match_parent"
    android:layout_height="wrap_content"
    android:orientation="vertical"
    android:theme="@style/PqTheme"
    android:background="@android:color/transparent"
    app:behavior_hideable="true"
    app:behavior_peekHeight="80dp"
    app:layout_behavior="com.google.android.material.bottomsheet.BottomSheetBehavior"
    app:layout_constraintBottom_toBottomOf="parent"
    app:layout_constraintEnd_toEndOf="parent"
    app:layout_constraintStart_toStartOf="parent">

    <androidx.cardview.widget.CardView
        android:layout_width="match_parent"
        android:layout_height="wrap_content">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            app:layout_constraintTop_toTopOf="parent"
            android:orientation="vertical">

            <TextView
                android:id="@+id/changeProfile"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:letterSpacing="0.04"
                android:padding="20dp"
                android:text="@string/change_profile_photo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />


            <View
                android:id="@+id/view"
                android:layout_width="wrap_content"
                android:layout_height="1dp"
                android:layout_marginStart="10dp"

                android:layout_marginEnd="10dp"
                android:background="#A3A3A3"
                app:layout_constraintEnd_toEndOf="parent"
                app:layout_constraintHorizontal_bias="0.0" />

            <TextView
                android:id="@+id/removeProfilePhoto"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:drawablePadding="20dp"
                android:letterSpacing="0.04"
                android:padding="20dp"
                android:text="@string/remove_profile_photo"
                android:textAlignment="center"
                android:textSize="18sp"
                android:textStyle="bold" />
            <TextView
                android:id="@+id/cancelImageChange"
                android:layout_width="match_parent"
                android:layout_height="wrap_content"
                android:layout_gravity="center_horizontal"
                android:letterSpacing="0.06"
                android:textAllCaps="true"
                android:textStyle="bold"
                android:padding="15dp"
                android:text="@string/cancel"
                android:gravity="center_horizontal"
                android:textColor="@color/holo_red_light"
                android:textSize="18sp" />

        </LinearLayout>
    </androidx.cardview.widget.CardView>
</LinearLayout>

