<?xml version="1.0" encoding="utf-8"?>
<androidx.constraintlayout.widget.ConstraintLayout
    xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:app="http://schemas.android.com/apk/res-auto"
    xmlns:tools="http://schemas.android.com/tools"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    tools:context=".PasswordChange">

    <TextView
        android:id="@+id/passwordInfotxt"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="?actionBarSize"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        android:text="@string/password_info"
        android:gravity="fill_horizontal"
        android:letterSpacing="0.05"
        android:textSize="18sp"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toTopOf="parent" />

    <com.google.android.material.textfield.TextInputLayout
        android:id="@+id/PasswordTextLayout"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:hint="@string/password"
        app:endIconMode="password_toggle"
        android:layout_marginTop="40dp"
        app:errorIconTint="@android:color/holo_red_light"
        app:errorTextColor="@android:color/holo_red_light"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.0"
        app:errorIconDrawable="@drawable/ic_baseline_error_24"
        app:boxStrokeErrorColor="@android:color/transparent"
        app:errorTextAppearance="@style/counterText"
        android:layout_marginStart="20dp"
        android:layout_marginEnd="20dp"
        app:startIconDrawable="@drawable/ic_key"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@id/passwordInfotxt"
        android:letterSpacing="0.04">

        <com.google.android.material.textfield.TextInputEditText
            android:id="@+id/changePasswordEdt"
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:outlineAmbientShadowColor="@android:color/transparent"
            android:outlineSpotShadowColor="@android:color/transparent"
            android:focusedByDefault="false"
            android:letterSpacing="0.04"
            android:background="@drawable/pq_neutral_button"
            android:ems="10"
            android:padding="15dp"
            android:inputType="textPassword"
            android:textSize="18sp" />

    </com.google.android.material.textfield.TextInputLayout>

    <Button
        android:id="@+id/verifyPassordChange"
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_marginTop="40dp"
        android:layout_marginEnd="20dp"
        android:layout_marginStart="20dp"
        android:background="@drawable/pq_button"
        android:letterSpacing="0.05"
        android:text="@string/verify"
        android:shadowColor="@android:color/transparent"
        android:outlineAmbientShadowColor="@android:color/transparent"
        android:outlineSpotShadowColor="@android:color/transparent"
        android:textColor="@color/white2"
        android:textSize="18sp"
        android:textStyle="bold"
        android:textAllCaps="false"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintTop_toBottomOf="@id/forgotPsd" />

    <ProgressBar
        android:id="@+id/PasswordchangesProgress"
        android:layout_width="32dp"
        android:layout_height="31dp"
        android:indeterminateTint="@color/holo_red_light"
        app:layout_constraintBottom_toBottomOf="@+id/verifyPassordChange"
        app:layout_constraintEnd_toEndOf="@+id/verifyPassordChange"
        app:layout_constraintHorizontal_bias="0.888"
        app:layout_constraintStart_toStartOf="@+id/verifyPassordChange"
        app:layout_constraintTop_toTopOf="@+id/verifyPassordChange" />


    <TextView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        app:layout_constraintEnd_toEndOf="parent"
        app:layout_constraintHorizontal_bias="0.5"
        android:layout_marginTop="20dp"
        android:text="@string/forgot_your_password"
        android:textSize="16sp"
        android:textAlignment="center"
        android:id="@+id/forgotPsd"
        app:layout_constraintStart_toStartOf="parent"
        app:layout_constraintTop_toBottomOf="@+id/PasswordTextLayout" />


</androidx.constraintlayout.widget.ConstraintLayout>
